; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_pa64solib.c__initialize_pa64_solib.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_pa64solib.c__initialize_pa64_solib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"sharedlibrary\00", align 1
@class_files = common dso_local global i32 0, align 4
@pa64_solib_sharedlibrary_command = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [62 x i8] c"Load shared object library symbols for files matching REGEXP.\00", align 1
@pa64_sharedlibrary_info_command = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [42 x i8] c"Status of loaded shared object libraries.\00", align 1
@.str.3 = private unnamed_addr constant [15 x i8] c"auto-solib-add\00", align 1
@class_support = common dso_local global i32 0, align 4
@var_boolean = common dso_local global i32 0, align 4
@auto_solib_add = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [333 x i8] c"Set autoloading of shared library symbols.\0AIf \22on\22, symbols from all shared object libraries will be loaded\0Aautomatically when the inferior begins execution, when the dynamic linker\0Ainforms gdb that a new library has been loaded, or when attaching to the\0Ainferior.  Otherwise, symbols must be loaded manually, using `sharedlibrary'.\00", align 1
@setlist = common dso_local global i32 0, align 4
@showlist = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [17 x i8] c"auto-solib-limit\00", align 1
@var_zinteger = common dso_local global i32 0, align 4
@auto_solib_limit = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [264 x i8] c"Set threshold (in Mb) for autoloading shared library symbols.\0AWhen shared library autoloading is enabled, new libraries will be loaded\0Aonly until the total size of shared library symbols exceeds this\0Athreshold in megabytes.  Is ignored when using `sharedlibrary'.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_initialize_pa64_solib() #0 {
  %1 = load i32, i32* @class_files, align 4
  %2 = load i32, i32* @pa64_solib_sharedlibrary_command, align 4
  %3 = call i32 @add_com(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %1, i32 %2, i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.1, i64 0, i64 0))
  %4 = load i32, i32* @pa64_sharedlibrary_info_command, align 4
  %5 = call i32 @add_info(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %4, i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str.2, i64 0, i64 0))
  %6 = load i32, i32* @class_support, align 4
  %7 = load i32, i32* @var_boolean, align 4
  %8 = call i32 @add_set_cmd(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0), i32 %6, i32 %7, i8* bitcast (i32* @auto_solib_add to i8*), i8* getelementptr inbounds ([333 x i8], [333 x i8]* @.str.4, i64 0, i64 0), i32* @setlist)
  %9 = call i32 @add_show_from_set(i32 %8, i32* @showlist)
  %10 = load i32, i32* @class_support, align 4
  %11 = load i32, i32* @var_zinteger, align 4
  %12 = call i32 @add_set_cmd(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0), i32 %10, i32 %11, i8* bitcast (i32* @auto_solib_limit to i8*), i8* getelementptr inbounds ([264 x i8], [264 x i8]* @.str.6, i64 0, i64 0), i32* @setlist)
  %13 = call i32 @add_show_from_set(i32 %12, i32* @showlist)
  store i32 100, i32* @auto_solib_limit, align 4
  %14 = call i32 (...) @pa64_solib_restart()
  ret void
}

declare dso_local i32 @add_com(i8*, i32, i32, i8*) #1

declare dso_local i32 @add_info(i8*, i32, i8*) #1

declare dso_local i32 @add_show_from_set(i32, i32*) #1

declare dso_local i32 @add_set_cmd(i8*, i32, i32, i8*, i8*, i32*) #1

declare dso_local i32 @pa64_solib_restart(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
